--- a/blog/style.css
+++ b/blog/style.css
@@ -54,6 +54,13 @@ p{
     margin-right: auto;
 }
 
+#favourite2{
+    display: block;
+    margin-top: 20px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 .description{
     display: flex;
     align-items: flex-end;
@@ -78,7 +85,20 @@ p{
     margin-right: auto;
 }
 
+#comment2{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 #submit{
+    display: block;
+    margin-top: 20px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#submit2{
     display: block;
     margin-top: 20px;
     margin-left: auto;
